commit first post edit

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -170,6 +170,9 @@ Then look no further! Join A.B.A2 and me as we explore the wide world of compute
 <blockquote>
 <p>🤖 <em>I was programmed to do one thing - serve coffee at affordable prices.</em></p></blockquote>
 <p>A.B.A2 has graciously joined me on this journey to build <em>LearnTechCafe</em> into hub for curiosity, savings and learning!</p>
+<h3 id="contact-us">Contact Us<a hidden class="anchor" aria-hidden="true" href="#contact-us">#</a></h3>
+<p>Do you have any feedback for us?
+💬 <a href="mailto:hello@learntechcafe.com">Send us an email!</a></p>
 
 
   </div>
