done first post!

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -161,6 +161,7 @@ Then look no further! Join A.B.A2 and me as we explore the wide world of compute
 <li>And more?</li>
 </ul>
 <p>Then look no further! Join A.B.A2 and me as we explore the wide world of computer technology, and hopefully teach you (and ourselves) a little something along the way!</p>
+<p><strong>Let&rsquo;s build digital skills on a budget.</strong></p>
 <h2 id="meet-the-hosts">Meet the Hosts<a hidden class="anchor" aria-hidden="true" href="#meet-the-hosts">#</a></h2>
 <h3 id="dan-carbone">Dan Carbone<a hidden class="anchor" aria-hidden="true" href="#dan-carbone">#</a></h3>
 <p>Author and creator of <em>LearnTechCafe</em>. I&rsquo;m a spatial data analyst by trade - but don&rsquo;t let that intimidate you! While I do have formal training in spatial data analysis, the rest of my path into tech was paved with curiosuty, coffee and plenty of trial and error. I’m a life-long learner diving into the digital realm and sharing my beginner-friendly, cost-saving lessons with you as I go.</p>
