--- a/public/404.html
+++ b/public/404.html
@@ -73,7 +73,9 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="LearnTechCafe (Alt + H)">LearnTechCafe</a>
+            <a href="http://localhost:1313/" accesskey="h" title="LearnTechCafe (Alt + H)">
+                <img src="http://localhost:1313/images/LTC-Logo&#43;Text-min.png" alt="" aria-label="logo"
+                    height="40">LearnTechCafe</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
