--- a/public/404.html
+++ b/public/404.html
@@ -74,7 +74,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="http://localhost:1313/" accesskey="h" title="LearnTechCafe (Alt + H)">
-                <img src="http://localhost:1313/images/LTC-Logo&#43;Text-min.png" alt="" aria-label="logo"
+                <img src="http://localhost:1313/images/LTC-Logo-only-min.png" alt="" aria-label="logo"
                     height="40">LearnTechCafe</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
