updated ABA2 to new blue robot logo emoji

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -23,7 +23,7 @@ And more?
 Then look no further! Join A.B.A2 and me as we explore the wide world of computer technology, and hopefully teach you (and ourselves) a little something along the way!">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/about/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d841fbee131364e386ba63053cbf1f7351dde180147603b6dba07036fae7ab47.css" integrity="sha256-2EH77hMTZOOGumMFPL8fc1Hd4YAUdgO226BwNvrnq0c=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.34e3ca243effae808e8cecc8570d341d56b7e69ec48f7bccb73e96cf9bef477d.css" integrity="sha256-NOPKJD7/roCOjOzIVw00HVa35p7Ej3vMtz6Wz5vvR30=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
@@ -175,7 +175,7 @@ Then look no further! Join A.B.A2 and me as we explore the wide world of compute
 <h3 id="aba2-advanced-barista-automton-version-2">A.B.A2 (Advanced Barista Automton, version 2)<a hidden class="anchor" aria-hidden="true" href="#aba2-advanced-barista-automton-version-2">#</a></h3>
 <p>My robotic companion and co-host, expanding his horizons and upgrading from his humble beginnings as a barista, to learn more about his computer heritage.</p>
 <blockquote>
-<p>🤖 <em>I was programmed to do one thing - serve coffee at affordable prices.</em></p></blockquote>
+<p><img src="/images/ABA2-min.png" alt="🤖" style="width:1.1em; height:1.1em; vertical-align: -0.2em; display: inline-block; margin: 0; padding: 0; border: 0;"> <em>I was programmed to do one thing - serve coffee at affordable prices.</em></p></blockquote>
 <p>A.B.A2 has graciously joined me on this journey to build <em>LearnTechCafe</em> into hub for curiosity, savings and learning!</p>
 <h3 id="contact-us">Contact Us<a hidden class="anchor" aria-hidden="true" href="#contact-us">#</a></h3>
 <p>Do you have any feedback for us?
